tests/dataset/tpc-ds/compiler/cpp/q73.error
/tmp/TestCPPCompiler_TPCDSQueriesq73995005988/001/prog.cpp:85:12: error: ‘ss’ was not declared in this scope
   85 |   decltype(ss.ss_ticket_number) ticket;
      |            ^~
/tmp/TestCPPCompiler_TPCDSQueriesq73995005988/001/prog.cpp:85:12: error: ‘ss’ was not declared in this scope
/tmp/TestCPPCompiler_TPCDSQueriesq73995005988/001/prog.cpp:86:12: error: ‘ss’ was not declared in this scope
   86 |   decltype(ss.ss_customer_sk) cust;
      |            ^~
/tmp/TestCPPCompiler_TPCDSQueriesq73995005988/001/prog.cpp:86:12: error: ‘ss’ was not declared in this scope
/tmp/TestCPPCompiler_TPCDSQueriesq73995005988/001/prog.cpp:89:12: error: ‘ss’ was not declared in this scope
   89 |   decltype(ss) ss;
      |            ^~
/tmp/TestCPPCompiler_TPCDSQueriesq73995005988/001/prog.cpp:89:12: error: ‘ss’ was not declared in this scope
/tmp/TestCPPCompiler_TPCDSQueriesq73995005988/001/prog.cpp:90:12: error: ‘d’ was not declared in this scope
   90 |   decltype(d) d;
      |            ^
/tmp/TestCPPCompiler_TPCDSQueriesq73995005988/001/prog.cpp:90:12: error: ‘d’ was not declared in this scope
/tmp/TestCPPCompiler_TPCDSQueriesq73995005988/001/prog.cpp:91:12: error: ‘s’ was not declared in this scope
   91 |   decltype(s) s;
      |            ^
/tmp/TestCPPCompiler_TPCDSQueriesq73995005988/001/prog.cpp:91:12: error: ‘s’ was not declared in this scope
/tmp/TestCPPCompiler_TPCDSQueriesq73995005988/001/prog.cpp:92:12: error: ‘hd’ was not declared in this scope; did you mean ‘d’?
   92 |   decltype(hd) hd;
      |            ^~
      |            d
/tmp/TestCPPCompiler_TPCDSQueriesq73995005988/001/prog.cpp:92:12: error: ‘hd’ was not declared in this scope; did you mean ‘d’?
   92 |   decltype(hd) hd;
      |            ^~
      |            d
/tmp/TestCPPCompiler_TPCDSQueriesq73995005988/001/prog.cpp:103:12: error: ‘c’ was not declared in this scope
  103 |   decltype(c.c_last_name) c_last_name;
      |            ^
/tmp/TestCPPCompiler_TPCDSQueriesq73995005988/001/prog.cpp:103:12: error: ‘c’ was not declared in this scope
/tmp/TestCPPCompiler_TPCDSQueriesq73995005988/001/prog.cpp:104:12: error: ‘c’ was not declared in this scope
  104 |   decltype(c.c_first_name) c_first_name;
      |            ^
/tmp/TestCPPCompiler_TPCDSQueriesq73995005988/001/prog.cpp:104:12: error: ‘c’ was not declared in this scope
/tmp/TestCPPCompiler_TPCDSQueriesq73995005988/001/prog.cpp:105:12: error: ‘c’ was not declared in this scope
  105 |   decltype(c.c_salutation) c_salutation;
      |            ^
/tmp/TestCPPCompiler_TPCDSQueriesq73995005988/001/prog.cpp:105:12: error: ‘c’ was not declared in this scope
/tmp/TestCPPCompiler_TPCDSQueriesq73995005988/001/prog.cpp:106:12: error: ‘c’ was not declared in this scope
  106 |   decltype(c.c_preferred_cust_flag) c_preferred_cust_flag;
      |            ^
/tmp/TestCPPCompiler_TPCDSQueriesq73995005988/001/prog.cpp:106:12: error: ‘c’ was not declared in this scope
/tmp/TestCPPCompiler_TPCDSQueriesq73995005988/001/prog.cpp:107:38: error: ‘struct __struct7’ has no member named ‘key’
  107 |   decltype(std::declval<__struct7>().key.ticket) ss_ticket_number;
      |                                      ^~~
/tmp/TestCPPCompiler_TPCDSQueriesq73995005988/001/prog.cpp:107:38: error: ‘struct __struct7’ has no member named ‘key’
/tmp/TestCPPCompiler_TPCDSQueriesq73995005988/001/prog.cpp:108:38: error: ‘struct __struct7’ has no member named ‘cnt’
  108 |   decltype(std::declval<__struct7>().cnt) cnt;
      |                                      ^~~
/tmp/TestCPPCompiler_TPCDSQueriesq73995005988/001/prog.cpp:108:38: error: ‘struct __struct7’ has no member named ‘cnt’
/tmp/TestCPPCompiler_TPCDSQueriesq73995005988/001/prog.cpp: In lambda function:
/tmp/TestCPPCompiler_TPCDSQueriesq73995005988/001/prog.cpp:353:27: error: no match for ‘operator==’ (operand types are ‘Group’ and ‘Group’)
  353 |               if (__g.key == __key) {
      |                   ~~~~~~~ ^~ ~~~~~
      |                       |      |
      |                       Group  Group
/tmp/TestCPPCompiler_TPCDSQueriesq73995005988/001/prog.cpp:354:47: error: cannot convert ‘StoreSale’ to ‘int’ in initialization
  354 |                 __g.items.push_back(__struct7{ss, d, s, hd});
      |                                               ^~
      |                                               |
      |                                               StoreSale
/tmp/TestCPPCompiler_TPCDSQueriesq73995005988/001/prog.cpp:361:59: error: cannot convert ‘StoreSale’ to ‘int’ in initialization
  361 |                   __key, std::vector<__struct7>{__struct7{ss, d, s, hd}}});
      |                                                           ^~
      |                                                           |
      |                                                           StoreSale
/tmp/TestCPPCompiler_TPCDSQueriesq73995005988/001/prog.cpp:361:72: error: no matching function for call to ‘std::vector<__struct7>::vector(<brace-enclosed initializer list>)’
  361 |                   __key, std::vector<__struct7>{__struct7{ss, d, s, hd}}});
      |                                                                        ^
In file included from /usr/include/c++/13/vector:66,
                 from /tmp/TestCPPCompiler_TPCDSQueriesq73995005988/001/prog.cpp:8:
/usr/include/c++/13/bits/stl_vector.h:707:9: note: candidate: ‘template<class _InputIterator, class> std::vector<_Tp, _Alloc>::vector(_InputIterator, _InputIterator, const allocator_type&) [with <template-parameter-2-2> = _InputIterator; _Tp = __struct7; _Alloc = std::allocator<__struct7>]’
  707 |         vector(_InputIterator __first, _InputIterator __last,
      |         ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:707:9: note:   template argument deduction/substitution failed:
/usr/include/c++/13/bits/stl_vector.h:678:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector(std::initializer_list<_Tp>, const allocator_type&) [with _Tp = __struct7; _Alloc = std::allocator<__struct7>; allocator_type = std::allocator<__struct7>]’
  678 |       vector(initializer_list<value_type> __l,
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:678:7: note:   conversion of argument 1 would be ill-formed:
/usr/include/c++/13/bits/stl_vector.h:659:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector(std::vector<_Tp, _Alloc>&&, std::__type_identity_t<_Alloc>&) [with _Tp = __struct7; _Alloc = std::allocator<__struct7>; std::__type_identity_t<_Alloc> = std::allocator<__struct7>]’
  659 |       vector(vector&& __rv, const __type_identity_t<allocator_type>& __m)
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:659:7: note:   candidate expects 2 arguments, 1 provided
/usr/include/c++/13/bits/stl_vector.h:640:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector(std::vector<_Tp, _Alloc>&&, const allocator_type&, std::false_type) [with _Tp = __struct7; _Alloc = std::allocator<__struct7>; allocator_type = std::allocator<__struct7>; std::false_type = std::integral_constant<bool, false>]’
  640 |       vector(vector&& __rv, const allocator_type& __m, false_type)
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:640:7: note:   candidate expects 3 arguments, 1 provided
/usr/include/c++/13/bits/stl_vector.h:635:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector(std::vector<_Tp, _Alloc>&&, const allocator_type&, std::true_type) [with _Tp = __struct7; _Alloc = std::allocator<__struct7>; allocator_type = std::allocator<__struct7>; std::true_type = std::integral_constant<bool, true>]’
  635 |       vector(vector&& __rv, const allocator_type& __m, true_type) noexcept
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:635:7: note:   candidate expects 3 arguments, 1 provided
/usr/include/c++/13/bits/stl_vector.h:624:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector(const std::vector<_Tp, _Alloc>&, std::__type_identity_t<_Alloc>&) [with _Tp = __struct7; _Alloc = std::allocator<__struct7>; std::__type_identity_t<_Alloc> = std::allocator<__struct7>]’
  624 |       vector(const vector& __x, const __type_identity_t<allocator_type>& __a)
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:624:7: note:   candidate expects 2 arguments, 1 provided
/usr/include/c++/13/bits/stl_vector.h:620:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector(std::vector<_Tp, _Alloc>&&) [with _Tp = __struct7; _Alloc = std::allocator<__struct7>]’
  620 |       vector(vector&&) noexcept = default;
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:620:7: note:   conversion of argument 1 would be ill-formed:
/usr/include/c++/13/bits/stl_vector.h:601:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector(const std::vector<_Tp, _Alloc>&) [with _Tp = __struct7; _Alloc = std::allocator<__struct7>]’
  601 |       vector(const vector& __x)
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:601:7: note:   conversion of argument 1 would be ill-formed:
/usr/include/c++/13/bits/stl_vector.h:569:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector(size_type, const value_type&, const allocator_type&) [with _Tp = __struct7; _Alloc = std::allocator<__struct7>; size_type = long unsigned int; value_type = std::vector<__struct7>::value_type; allocator_type = std::allocator<__struct7>]’
  569 |       vector(size_type __n, const value_type& __value,
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:569:7: note:   candidate expects 3 arguments, 1 provided
/usr/include/c++/13/bits/stl_vector.h:556:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector(size_type, const allocator_type&) [with _Tp = __struct7; _Alloc = std::allocator<__struct7>; size_type = long unsigned int; allocator_type = std::allocator<__struct7>]’
  556 |       vector(size_type __n, const allocator_type& __a = allocator_type())
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:556:7: note:   conversion of argument 1 would be ill-formed:
/usr/include/c++/13/bits/stl_vector.h:542:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector(const allocator_type&) [with _Tp = __struct7; _Alloc = std::allocator<__struct7>; allocator_type = std::allocator<__struct7>]’
  542 |       vector(const allocator_type& __a) _GLIBCXX_NOEXCEPT
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:542:7: note:   conversion of argument 1 would be ill-formed:
/usr/include/c++/13/bits/stl_vector.h:531:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector() [with _Tp = __struct7; _Alloc = std::allocator<__struct7>]’
  531 |       vector() = default;
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:531:7: note:   candidate expects 0 arguments, 1 provided
/tmp/TestCPPCompiler_TPCDSQueriesq73995005988/001/prog.cpp: In function ‘int main()’:
/tmp/TestCPPCompiler_TPCDSQueriesq73995005988/001/prog.cpp:372:5: error: conversion from ‘vector<__struct9>’ to non-scalar type ‘vector<__struct7>’ requested
  329 |   std::vector<__struct7> groups = ([&]() {
      |                                   ~~~~~~~~
  330 |     std::vector<__struct8> __groups;
      |     ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  331 |     for (auto ss : store_sales) {
      |     ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  332 |       for (auto d : date_dim) {
      |       ~~~~~~~~~~~~~~~~~~~~~~~~~
  333 |         if (!((d.d_date_sk == ss.ss_sold_date_sk)))
      |         ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  334 |           continue;
      |           ~~~~~~~~~
  335 |         for (auto s : store) {
      |         ~~~~~~~~~~~~~~~~~~~~~~
  336 |           if (!((s.s_store_sk == ss.ss_store_sk)))
      |           ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  337 |             continue;
      |             ~~~~~~~~~
  338 |           for (auto hd : household_demographics) {
      |           ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  339 |             if (!((hd.hd_demo_sk == ss.ss_hdemo_sk)))
      |             ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  340 |               continue;
      |               ~~~~~~~~~
  341 |             if (!((((((((d.d_dom >= 1) && (d.d_dom <= 2)) &&
      |             ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  342 |                        (((hd.hd_buy_potential == std::string("1001-5000")) ||
      |                        ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  343 |                          (hd.hd_buy_potential == std::string("0-500"))))) &&
      |                          ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  344 |                       (hd.hd_vehicle_count > 0)) &&
      |                       ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  345 |                      ((hd.hd_dep_count / hd.hd_vehicle_count) > 1)) &&
      |                      ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  346 |                     ((((d.d_year == 1998) || (d.d_year == 1999)) ||
      |                     ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  347 |                       (d.d_year == 2000)))) &&
      |                       ~~~~~~~~~~~~~~~~~~~~~~~~
  348 |                    (s.s_county == std::string("A")))))
      |                    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  349 |               continue;
      |               ~~~~~~~~~
  350 |             auto __key = Group{ss.ss_ticket_number, ss.ss_customer_sk};
      |             ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  351 |             bool __found = false;
      |             ~~~~~~~~~~~~~~~~~~~~~
  352 |             for (auto &__g : __groups) {
      |             ~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  353 |               if (__g.key == __key) {
      |               ~~~~~~~~~~~~~~~~~~~~~~~
  354 |                 __g.items.push_back(__struct7{ss, d, s, hd});
      |                 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  355 |                 __found = true;
      |                 ~~~~~~~~~~~~~~~
  356 |                 break;
      |                 ~~~~~~
  357 |               }
      |               ~
  358 |             }
      |             ~
  359 |             if (!__found) {
      |             ~~~~~~~~~~~~~~~
  360 |               __groups.push_back(__struct8{
      |               ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  361 |                   __key, std::vector<__struct7>{__struct7{ss, d, s, hd}}});
      |                   ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  362 |             }
      |             ~
  363 |           }
      |           ~
  364 |         }
      |         ~
  365 |       }
      |       ~
  366 |     }
      |     ~
  367 |     std::vector<__struct9> __items;
      |     ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  368 |     for (auto &g : __groups) {
      |     ~~~~~~~~~~~~~~~~~~~~~~~~~~
  369 |       __items.push_back(__struct9{g.key, ((int)g.items.size())});
      |       ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  370 |     }
      |     ~
  371 |     return __items;
      |     ~~~~~~~~~~~~~~~
  372 |   })();
      |   ~~^~
/tmp/TestCPPCompiler_TPCDSQueriesq73995005988/001/prog.cpp: In lambda function:
/tmp/TestCPPCompiler_TPCDSQueriesq73995005988/001/prog.cpp:374:62: error: ‘struct __struct7’ has no member named ‘cnt’
  374 |     std::vector<std::pair<decltype(std::declval<__struct7>().cnt), Result>>
      |                                                              ^~~
/tmp/TestCPPCompiler_TPCDSQueriesq73995005988/001/prog.cpp:374:62: error: ‘struct __struct7’ has no member named ‘cnt’
/tmp/TestCPPCompiler_TPCDSQueriesq73995005988/001/prog.cpp:374:68: error: template argument 1 is invalid
  374 |     std::vector<std::pair<decltype(std::declval<__struct7>().cnt), Result>>
      |                                                                    ^~~~~~
/tmp/TestCPPCompiler_TPCDSQueriesq73995005988/001/prog.cpp:374:74: error: template argument 1 is invalid
  374 |     std::vector<std::pair<decltype(std::declval<__struct7>().cnt), Result>>
      |                                                                          ^~
/tmp/TestCPPCompiler_TPCDSQueriesq73995005988/001/prog.cpp:374:74: error: template argument 2 is invalid
/tmp/TestCPPCompiler_TPCDSQueriesq73995005988/001/prog.cpp:378:37: error: ‘struct __struct7’ has no member named ‘key’
  378 |         if (!((c.c_customer_sk == g.key.cust)))
      |                                     ^~~
/tmp/TestCPPCompiler_TPCDSQueriesq73995005988/001/prog.cpp:380:19: error: ‘struct __struct7’ has no member named ‘cnt’
  380 |         if (!(((g.cnt >= 1) && (g.cnt <= 5))))
      |                   ^~~
/tmp/TestCPPCompiler_TPCDSQueriesq73995005988/001/prog.cpp:380:35: error: ‘struct __struct7’ has no member named ‘cnt’
  380 |         if (!(((g.cnt >= 1) && (g.cnt <= 5))))
      |                                   ^~~
/tmp/TestCPPCompiler_TPCDSQueriesq73995005988/001/prog.cpp:382:17: error: request for member ‘push_back’ in ‘__items’, which is of non-class type ‘int’
  382 |         __items.push_back(
      |                 ^~~~~~~~~
/tmp/TestCPPCompiler_TPCDSQueriesq73995005988/001/prog.cpp:383:39: error: ‘struct __struct7’ has no member named ‘cnt’
  383 |             {std::vector<decltype((-g.cnt))>{(-g.cnt), c.c_last_name},
      |                                       ^~~
/tmp/TestCPPCompiler_TPCDSQueriesq73995005988/001/prog.cpp:383:39: error: ‘struct __struct7’ has no member named ‘cnt’
/tmp/TestCPPCompiler_TPCDSQueriesq73995005988/001/prog.cpp:383:44: error: template argument 1 is invalid
  383 |             {std::vector<decltype((-g.cnt))>{(-g.cnt), c.c_last_name},
      |                                            ^
/tmp/TestCPPCompiler_TPCDSQueriesq73995005988/001/prog.cpp:383:44: error: template argument 2 is invalid
/tmp/TestCPPCompiler_TPCDSQueriesq73995005988/001/prog.cpp:383:50: error: ‘struct __struct7’ has no member named ‘cnt’
  383 |             {std::vector<decltype((-g.cnt))>{(-g.cnt), c.c_last_name},
      |                                                  ^~~
/tmp/TestCPPCompiler_TPCDSQueriesq73995005988/001/prog.cpp:385:48: error: ‘struct __struct7’ has no member named ‘key’
  385 |                     c.c_preferred_cust_flag, g.key.ticket, g.cnt}});
      |                                                ^~~
/tmp/TestCPPCompiler_TPCDSQueriesq73995005988/001/prog.cpp:385:62: error: ‘struct __struct7’ has no member named ‘cnt’
  385 |                     c.c_preferred_cust_flag, g.key.ticket, g.cnt}});
      |                                                              ^~~
/tmp/TestCPPCompiler_TPCDSQueriesq73995005988/001/prog.cpp:388:23: error: request for member ‘begin’ in ‘__items’, which is of non-class type ‘int’
  388 |     std::sort(__items.begin(), __items.end(),
      |                       ^~~~~
/tmp/TestCPPCompiler_TPCDSQueriesq73995005988/001/prog.cpp:388:40: error: request for member ‘end’ in ‘__items’, which is of non-class type ‘int’
  388 |     std::sort(__items.begin(), __items.end(),
      |                                        ^~~
/tmp/TestCPPCompiler_TPCDSQueriesq73995005988/001/prog.cpp:391:20: error: ‘begin’ was not declared in this scope; did you mean ‘std::begin’?
  391 |     for (auto &p : __items)
      |                    ^~~~~~~
      |                    std::begin
In file included from /usr/include/c++/13/string:53,
                 from /usr/include/c++/13/bits/locale_classes.h:40,
                 from /usr/include/c++/13/bits/ios_base.h:41,
                 from /usr/include/c++/13/ios:44,
                 from /usr/include/c++/13/ostream:40,
                 from /usr/include/c++/13/iostream:41,
                 from /tmp/TestCPPCompiler_TPCDSQueriesq73995005988/001/prog.cpp:3:
/usr/include/c++/13/bits/range_access.h:114:37: note: ‘std::begin’ declared here
  114 |   template<typename _Tp> const _Tp* begin(const valarray<_Tp>&) noexcept;
      |                                     ^~~~~
/tmp/TestCPPCompiler_TPCDSQueriesq73995005988/001/prog.cpp:391:20: error: ‘end’ was not declared in this scope; did you mean ‘std::end’?
  391 |     for (auto &p : __items)
      |                    ^~~~~~~
      |                    std::end
/usr/include/c++/13/bits/range_access.h:116:37: note: ‘std::end’ declared here
  116 |   template<typename _Tp> const _Tp* end(const valarray<_Tp>&) noexcept;
      |                                     ^~~
